test/compile-fail/resolution/use/crate/top.rhdl
mod a {}
use a::crate;
